play nice with rvm

--- a/lib/capistrano/templates/run-puma.erb
+++ b/lib/capistrano/templates/run-puma.erb
@@ -1,7 +1,9 @@
 #!/bin/bash
 app=$1;
 cd $app || exit 1
-
+<% if fetch(:puma_rvm) %>
+source /etc/profile.d/rvm.sh
+<% end %>
 if [ -e Gemfile ]; then
     exec <%= fetch(:puma_user) ? "sudo -u #{puma_user(@role)}" : '' %> sh -c "exec bundle exec puma -C <%= fetch(:puma_conf) %> --daemon"
 else
